Consistency with Node callback convention.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "pi-temperature",
-  "version": "1.0.0",
-  "description": "Measure the tempature on a Raspberry Pi",
+  "version": "2.0.0",
+  "description": "Measure the temperature of a Raspberry Pi.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thesbros/pi-temperature.git"
+    "url": "https://github.com/odensc/pi-temperature.git"
   },
   "keywords": [
     "raspberry",
@@ -17,10 +14,10 @@
     "temp",
     "temperature"
   ],
-  "author": "thesbros <oden@thesbros.me>",
-  "license": "Apache 2.0",
+  "author": "Oden <hello@odensc.me>",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/thesbros/pi-temperature/issues"
+    "url": "https://github.com/odensc/pi-temperature/issues"
   },
-  "homepage": "https://github.com/thesbros/pi-temperature"
+  "homepage": "https://github.com/odensc/pi-temperature"
 }
